--- a/src/Controls/KarveControls/Themes/Generic.xaml
+++ b/src/Controls/KarveControls/Themes/Generic.xaml
@@ -33,29 +33,26 @@
         <Setter Property="Validation.ErrorTemplate">
             <Setter.Value>
                 <ControlTemplate x:Name="TextErrorTemplate">
-                    <DockPanel LastChildFill="True">
-                        <AdornedElementPlaceholder>
-                            <Border BorderBrush="Red" 
-
-                                BorderThickness="2"/>
+                    <StackPanel>
+                        <AdornedElementPlaceholder x:Name="errorControl">
+                            <Border BorderBrush="Red" BorderThickness="2"/>
                         </AdornedElementPlaceholder>
-                        <TextBlock FontSize="20" 
-
-                            Foreground="Red">*?*</TextBlock>
-                    </DockPanel>
+                        <TextBlock Text="{Binding AdornedElement.ToolTip,ElementName=errorControl}" 
+                                   Height="30"
+                                   FontSize="15"
+                                   Foreground="White" Background="Red"/>
+                    </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <Trigger Property="Validation.HasError" 
-
-                Value="True">
-                <Setter Property="ToolTip" 
-
-                    Value="{Binding RelativeSource=
-            {x:Static RelativeSource.Self},
-            Path=(Validation.Errors)[0].ErrorContent}"></Setter>
-            </Trigger>
+            <Trigger Property="Validation.HasError" Value="True">
+            <Setter Property="BorderBrush" Value="Red" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="ToolTip"    
+                Value="{Binding RelativeSource={RelativeSource Self}    
+                    , Path=(Validation.Errors)[0].ErrorContent}" />
+        </Trigger>
         </Style.Triggers>
     </Style>
     <ControlTemplate x:Key="validationTemplate">
